# fae_factory

./: Cargo.toml  README.md
.VSCodeCounter/2023-11-08_21-43-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-11-09_12-25-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
src/: assembler.rs  common.rs  crafting.rs  input.rs  items.rs  main.rs  player.rs  recipes.rs  structure.rs
src/input/: camera.rs  keyboard.rs  mod.rs  mouse.rs
src/items/: inventory.rs  item_spawner.rs  mod.rs
src/map/: grid.rs  mod.rs
src/player/: events.rs  mod.rs
src/research/: mod.rs
src/structures/: assembler.rs  chest.rs  gatherer.rs  mod.rs
