[package]
name = "fae_factory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.2", features = [
    "dynamic_linking",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_gilrs",
    ]}
bevy-inspector-egui = "0.19"
rand = "0.8.5"
strum = {version = "0.25.0", features=["derive"]}
strum_macros = "0.25.3"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
